--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/mudi?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
-spring.datasource.password=Guiposit@@123#
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
